# EV_Charging_Knowledge_Graph

./: .gitignore  Home.py  README.md  dataset_creation.ipynb  kep.ipynb  main.py  ocm_data.ipynb  pyproject.toml  score.ipynb  test.ipynb  upload_to_neo4j.ipynb  visualisation.ipynb
Final_Report/: datasheet.bib  main.tex
data/: municipalities_data_translated.json  ocm-charging-points-zuid-holland.json  osm-charging_points-zuid-holland.geojson  south_holland_municipalities.csv  south_holland_municipalities_v2_semicolon.csv
pages/: PC4 Map View.py  Point Map View.py  Rescoring.py  Score Map View.py  Table View.py
src/: google_maps_query.py  ocm_query.py  overpass_query.py
